
        - 'PARSED' key in response has been replaced with 'BODY'

        - Original user Action is now stored in {'ACTION'} of the response object. This can be useful when attempting to diagnose
        a failing action.

        - Added Asterisk::AMI::Async. Similiar to Asterisk::AMI::Common but it is safe for use in an event based application.

        - Removed method queue_member_toggle

        - Removed method play_digits

        - Changed queue_member_pause to no longer accept a pause value and instead just pauses the member.

        - Added method queue_member_unpause to unpause a queue member.

        - Removed Asterisk::AMI::Common::Dev. New methods will just be added to Asterisk::AMI::Common and a note
        added about compatibility.

        - Abstracted some of the logic in Asterisk::AMI::Common to a seperate module so that it may be shared with
        Asterisk::AMI::Async.

        - New constructor option AutoDiscard. When enabled (set to 1) it will discard responses for any action sent that
        did not register a callback

        - New constructor option Default_CB allows for setting a default callback subroutine for all actions.

        - Default Authentication method changed to MD5 instead of plaintext.

        - The 'OriginateHack' is now on by default which also meas call events are enabled by default

        - Pre-populate ActionID in the response so that it exists in the event of a timeout with no response at all.

        - Default timeout changed to 300 seconds

        NOT DONE

        - Look at the broken pipe issue (Done, needs testing)

        - Huge Doc changes, breakout config options into groups. Make less 'Scary'

        - Better handling when Blocking => 1 or 0 for various things, disconnects,

        - error handling broken in Asterisk::AMI::Mananger??? (why?, we dont overwrite any of this stuff for the parent)
